# mxnet-haskell

./: .gitignore  .travis.yml  LICENSE  README.md  stack.yaml
c2hs-extra/: c2hs-extra.cabal
c2hs-extra/src/C2HS/C/: Extra.hs
c2hs-extra/src/C2HS/C/Extra/: Marshal.hs
mxnet/: Setup.hs  mxnet.cabal
mxnet-examples/: LICENSE  mxnet-examples.cabal
mxnet-examples/apps/: ndarray.hs  symbol.hs
mxnet-nnvm/: mxnet-nnvm.cabal
mxnet-nnvm/src/MXNet/NNVM/: Base.hs
mxnet-nnvm/src/MXNet/NNVM/Base/Internal/: Raw.chs
mxnet-nnvm/src/MXNet/NNVM/Internal/Types/: Raw.chs
mxnet/src/MXNet/: Base.hs
mxnet/src/MXNet/Core/: Base.hs  Common.hs  DType.hs  Error.hs  Executor.hs  HMap.hs  NDArray.hs  Symbol.hs  Symbolic.hs  Types.hs
mxnet/src/MXNet/Core/Base/: DType.hs  Executor.hs  HMap.hs  Internal.hs  NDArray.hs  Symbol.hs
mxnet/src/MXNet/Core/Base/Internal/: Raw.chs  TH.hs
mxnet/src/MXNet/Core/Base/Internal/TH/: NDArray.hs  Symbol.hs
mxnet/src/MXNet/Core/Base/Native/: NDArray.hs  Symbol.hs
mxnet/src/MXNet/Core/Internal/: FFI.hs  Raw.chs
mxnet/src/MXNet/Core/Internal/Types/: Raw.chs
mxnet/src/MXNet/Core/NNVM/: Base.hs  Internal.hs
mxnet/src/MXNet/Core/NNVM/Base/Internal/: Raw.chs
mxnet/src/MXNet/Core/NNVM/Internal/: Raw.chs
mxnet/src/MXNet/Core/Predict/: Base.hs  Internal.hs
mxnet/src/MXNet/Core/Predict/Internal/: Raw.chs
mxnet/src/MXNet/Core/Types/: Internal.hs
mxnet/src/MXNet/Core/Types/Internal/: Raw.chs
mxnet/tests/: mxnet-test.hs
