name:                       mxnet-nnvm
version:                    0.1.0.0
synopsis:                   NNVM interface in Haskell.
description:                NNVM interface in Haskell via CFFI.
homepage:                   http://github.com/sighingnow/mxnet-haskell#readme
license:                    MIT
author:                     Tao He
maintainer:                 sighingnow@gmail.com
copyright:                  Copyright: (c) 2016 Tao He
category:                   Machine Learning
build-type:                 Simple
cabal-version:              >= 1.10

Library
    exposed-modules:
        MXNet.NNVM.Base
    other-modules:
        MXNet.NNVM.Internal.Types.Raw
        MXNet.NNVM.Base.Internal.Raw
    hs-source-dirs:         src
    build-tools:            c2hs
    default-language:       Haskell2010
    build-depends:          base
                          , c2hs-extra
    extra-libraries:        mxnet
