name:                       mxnet
version:                    0.1.0.0
synopsis:                   MXNet interface in Haskell.
description:                MXNet interface in Haskell via CFFI.
homepage:                   http://github.com/sighingnow/mxnet-haskell#readme
license:                    MIT
author:                     Tao He
maintainer:                 sighingnow@gmail.com
copyright:                  Copyright: (c) 2016 Tao He
category:                   Machine Learning
build-type:                 Simple
cabal-version:              >= 1.10

Library
    exposed-modules:
        MXNet.Core.Base
        MXNet.Core.Common
        MXNet.Core.Executor
        MXNet.Core.NDArray
        MXNet.Core.Symbolic
        MXNet.Core.Predict.Base
    other-modules:
        MXNet.Core.Internal.FFI
        MXNet.Core.Internal.Raw
        MXNet.Core.Predict.Internal.Raw
    hs-source-dirs:         src
    build-tools:            c2hs
    default-language:       Haskell2010
    build-depends:          base
    extra-libraries:        mxnet

