name:                       mxnet
version:                    0.1.0.1
synopsis:                   MXNet interface in Haskell.
description:                MXNet interface in Haskell via CFFI.
homepage:                   http://github.com/sighingnow/mxnet-haskell#readme
license:                    MIT
license-file:               LICENSE
author:                     Tao He
maintainer:                 sighingnow@gmail.com
copyright:                  Copyright: (c) 2016-2017 Tao He
category:                   Machine Learning
build-type:                 Simple
cabal-version:              >= 1.10

Library
    exposed-modules:
        MXNet.Core.Base
        MXNet.Core.HMap
        MXNet.Core.NDArray
        MXNet.Core.Symbol
        MXNet.Core.Predict.Base
        MXNet.Core.NNVM.Base
    other-modules:
        MXNet.Core.Base.Internal.TH
        MXNet.Core.Internal.Types.Raw
        MXNet.Core.Base.Internal.Raw
        MXNet.Core.Predict.Internal.Raw
        MXNet.Core.NNVM.Base.Internal.Raw
        MXNet.Core.Base.Internal.TH.NDArray
        MXNet.Core.Base.Internal.TH.Symbol
    hs-source-dirs:         src
    build-tools:            c2hs
    ghc-options:            -Wall -lmxnet
    default-language:       Haskell2010
    build-depends:          base >= 4.7 && < 5.0
                          , c2hs-extra >= 0.1
                          , array >= 0.5.1.0
                          , template-haskell >= 2.10.0.0
    extra-libraries:        mxnet

Test-Suite mxnet-test
    type:                   exitcode-stdio-1.0
    main-is:                mxnet-test.hs
    hs-source-dirs:         tests
    ghc-options:            -Wall
    default-language:       Haskell2010
    build-depends:          base >= 4.7 && < 5.0
                          , c2hs-extra >= 0.1
                          , mxnet
                          , QuickCheck >= 2.8.2
                          , tasty >= 0.11.0.3
                          , tasty-quickcheck >= 0.8.4
